--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,17 +1,16 @@
-@import './base.css';
+@import "./base.css";
 
 #app {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-
-  font-weight: normal;
 }
-
-a,
-.green {
+body {
+  display: flex;
+  place-items: center;
+}
+a {
   text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
   transition: 0.4s;
 }
 
@@ -21,9 +20,9 @@ a,
   }
 }
 
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
+@media (min-width: 1200px) {
+  .px-lg-6 {
+    padding-left: 4rem !important;
+    padding-right: 4rem !important;
   }
 }
