--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,28 +1,29 @@
 @import "./base.css";
 
 #app {
-  max-width: 1280px;
+  /*max-width: 1280px;*/
   margin: 0 auto;
-  padding: 2rem;
 }
 body {
-  display: flex;
-  place-items: center;
+  /*display: flex;*/
+  /*place-items: center;*/
 }
 a {
   text-decoration: none;
   transition: 0.4s;
 }
-
+.fs-7 {
+  font-size: 0.8rem !important;
+}
 @media (hover: hover) {
   a:hover {
     background-color: hsla(160, 100%, 37%, 0.2);
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 992px) {
   .px-lg-6 {
-    padding-left: 4rem !important;
-    padding-right: 4rem !important;
+    padding-left: 3rem !important;
+    padding-right: 3rem !important;
   }
 }
