--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -15,11 +15,11 @@ a {
 .fs-7 {
   font-size: 0.8rem !important;
 }
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
-}
+/*@media (hover: hover) {*/
+/*  a:hover {*/
+/*    background-color: hsla(160, 100%, 37%, 0.2);*/
+/*  }*/
+/*}*/
 
 @media (min-width: 992px) {
   .px-lg-6 {
