--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -62,9 +62,9 @@
 body {
   min-height: 100vh;
   color: var(--color-text);
-  background: var(--color-background);
+  /*background: var(--color-background);*/
   transition: color 0.5s, background-color 0.5s;
-  line-height: 1.5;
+  line-height: 1;
   font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
     Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   font-size: 16px;
